--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-invisible-recaptcha": "^0.2.11",
     "react-google-recaptcha-v3": "^1.5.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
